install jpPrefecture and datepicker

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,16 +30,12 @@
           <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
         </div>
         
-        <div class="field">
-          <%= f.label :birthday, class: "control-label" %>
-          <%= raw sprintf(
-            f.date_select(:birthday,
-            use_month_numbers: true,
-            start_year:        1930,
-            end_year:          (Time.now.year - 18),
-            default:           Date.new(1989, 1, 1),
-            date_separator:    
-            '%s'), '年 ', '月 ') + '日' %>
+        
+        
+        <%= f.text_field :birthday, class: 'date-picker' %>
+        
+        <div class ="field">
+          <%= f.collection_select :address, JpPrefecture::Prefecture.all, :name, :name %>
         </div>
         
         <div class="field">
