--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -35,6 +35,28 @@
           <%= f.label :current_password, class: "control-label" %> <i>(we need your current password to confirm your changes)</i>
           <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
         </div>
+        
+        <div class="field">
+          <%= f.label :birthday, autofocus: true, class: "control-labell" %>
+          <%= raw sprintf(
+            f.date_select(:birthday,
+            use_month_numbers: true,
+            start_year:        1930,
+            end_year:          (Time.now.year),
+            default:           Date.new(2000, 1, 1),
+            date_separator:    
+            '%s'), '年 ', '月 ') + '日' %>
+        </div>
+        
+        <div class ="field">
+          <%= f.collection_select :address, JpPrefecture::Prefecture.all, :name, :name %>
+        </div>
+        
+        <div class="field">
+          <%= f.label :introduction, autofocus: true, class: "control-label" %>
+          <%= f.text_field :introduction, autocomplete: "off", class: "form-control" %>
+        </div>
+        
     </div>
   </div>
   <div class="row">
