--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -155,6 +155,8 @@ input, textarea, select, .uneditable-input {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
+  margin-left: 8px !important;
+  margin-right: 8px !important;
   @include box_sizing;
 }
 
