--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,8 +36,8 @@
           <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
         </div>
         
-        <div class="field">
-          <%= f.label :birthday, autofocus: true, class: "control-labell" %>
+        <div class="field", style="display:inline-flex;">
+          <%= f.label :birthday, class: "control-label" %>
           <%= raw sprintf(
             f.date_select(:birthday,
             use_month_numbers: true,
@@ -49,7 +49,8 @@
         </div>
         
         <div class ="field">
-          <%= f.collection_select :address, JpPrefecture::Prefecture.all, :name, :name %>
+          <%= f.label :prefecture_code, class: "control-label" %>
+          <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name %>
         </div>
         
         <div class="field">
