--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,8 +48,14 @@
         </div>
         
         <div class="field">
+          <%= f.label :avatar, class: "control-label" %>
+          <%= f.file_field :avatar %>
+          <%= f.hidden_field :avatar_cache %>
+        </div>
+        
+        <div class="field">
           <%= f.label :introduction, class: "control-label" %>
-          <%= f.text_field :introduction, autocomplete: "off", class: "form-control" %>
+          <%= f.text_area :introduction, autocomplete: "off", class: "form-control", :rows=>"20" %>
         </div>
         
     </div>
