--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -54,9 +54,16 @@
         </div>
         
         <div class="field">
-          <%= f.label :avatar, class: "control-label" %>
-          <%= f.file_field :avatar %>
-          <%= f.hidden_field :avatar_cache %>
+          <div class="col-md-2" style="float:right; margin-right:30px">
+          <% if @user.avatar? %>
+            <%= image_tag @user.avatar.url %>
+          <% end %>
+          </div>
+          <div class ="col-md-9" style="padding-left:0">
+            <%= f.label :avatar, class: "control-label" %>
+            <%= f.file_field :avatar %>
+            <%= f.hidden_field :avatar_cache %>
+          </div>
         </div>
         
         <div class="field">
@@ -73,8 +80,6 @@
         </div>
         
         <br />
-        <%= gravatar_for resource %>
-        <a href="http://gravatar.com/emails">change</a>
     </div>
   </div>
 <% end %>
