--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,33 +1,18 @@
+<%= render 'shared/search_user_form' %>
 <% if signed_in? %>
-
 <div class="center jumbotron">
-  <h1>Home Musicians Sns App</h1>
-
-  <h2>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-
+  <h2>Home</h2>
   <%= link_to "Sign out now", destroy_user_session_path, method: "delete", class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("roughlyIcon.png", alt: "Rails"), 'http://rubyonrails.org/' %>
-
 <% else %>
-
 <div class="center jumbotron">
   <h1>Welcome to Musicians Sns App</h1>
-
   <h2>
     This is the home page for the
     <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
   </h2>
-
   <%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-lg btn-primary" %>
 </div>
-
-<%= link_to image_tag("roughlyIcon.png", alt: "Rails"), 'http://rubyonrails.org/' %>
-
 <% end %>
