--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,16 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "sample app", root_path, id: "logo" %>
+      <%= link_to "M", root_path, id: "logo" %>
+      
+      <% unless controller.action_name == 'index' || controller.action_name == 'home' %>
+      <div class="text-center col-md-8" style='margin-top: 10px;'>
+        
+          <%= render 'shared/autocomp_search_form' %>
+        
+      </div>
+      <% end %>
+      
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home", root_path %></li>
