--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
-<%= render 'shared/autocomp_search_form' %>
+<div class="container-inner" style='margin-top:50px;'>
+  <div class="row">
+    <div class="text-center col-xs-12 col-md-8 col-md-offset-2">
+      <%= render 'shared/autocomp_search_form' %>
+    </div>
+  </div>
+</div>
+
 <% if signed_in? %>
 <div class="container">
   <div class="col-xs-10">
