Improve User_Search_Form to Keep Tokens When Moving page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -204,6 +204,13 @@ input, textarea, .uneditable-input {
   padding-right: 10px;
 }
 
+#iTunes-result {
+  tr{
+    cursor: pointer;
+    cursor: hand;
+  }
+}
+
 
 /* users index */
 
