Fix Ordering number of hitting favorites to User_search_form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "createFavorite.js" %>
+<%= javascript_include_tag "itunesSearch.js" %>
 <% provide(:title, @user.name) %>
 <div class="row">
   <aside class="col-md-10 col-md-offset-1">
