--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "autocomplete_user_name.js" %>
+<%= javascript_include_tag "bootstrap-tokenfield.js" %>
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
