--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,11 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
+
+<div class="container-inner">
+  <div class='container'>
+     <%= image_tag 'fishing.png',:id =>'fishing_image' %>
+  </div>
+</div>
 <p>
   Get help on the Ruby on Rails Tutorial at the
   <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
