--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,13 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
+<%
+=begin
+%>
       <%= debug(params) if Rails.env.development? %>
+<%
+=end
+%>
     </div>
   </body>
 </html>
