--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'rotate_element.js' %>
 <div class="container-inner" style='margin-top:0px;'>
   <div id='front_logo_container'>
     <h1>FAVORITES</h1>
