--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,14 +3,12 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "M", root_path, id: "logo" %>
-      
+      <%= link_to "FR", root_path, id: "logo" %>
       <% unless controller.action_name == 'index' || controller.action_name == 'home' %>
       <div class="text-center col-md-8" style='margin-top: 10px;'>
         <%= render 'shared/autocomp_search_form' %>
       </div>
       <% end %>
-      
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home", root_path %></li>
@@ -22,7 +20,7 @@
                 Account <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Profile", current_user, data: { no_turbolink: true } %></li>
                 <li><%= link_to "Settings", edit_user_registration_path %></li>
                 <li class="divider"></li>
                 <li>
